[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/gun.png" type="Texture" id=1]
[ext_resource path="res://Weapon.gd" type="Script" id=2]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://FireExplosionParticle.tscn" type="PackedScene" id=4]

[node name="Weapon" type="Node2D"]
position = Vector2( 96.671, 62.536 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 3 )
FireExplosionParticle = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FirePoint" type="Position2D" parent="."]
position = Vector2( 15.5865, -3.18777 )

[node name="TimerFire" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="TimerFire" to="." method="_on_TimerFire_timeout"]
